--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,20 @@
       <scope>runtime</scope>
     </dependency>
 
+
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
+
+
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
+
   </dependencies>
 
   <build>
