--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,10 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
-    <dependency>
-      <groupId>com.zaxxer</groupId>
-      <artifactId>HikariCP</artifactId>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>com.zaxxer</groupId>-->
+      <!--<artifactId>HikariCP</artifactId>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>jquery</artifactId>
@@ -77,10 +77,10 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!--<dependency>-->
-      <!--<groupId>org.springframework.boot</groupId>-->
-      <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
 
 
   </dependencies>
